# toot

./: .gitignore  API.md  CONTRIBUTING.md  MEDIA_PREVIEW_ARCHITECTURE.md  MIGRATION.md  README.md  THEME_DEVELOPMENT.md  TOOTLES_ARCHITECTURE.md  pyproject.toml  test_tootles_functionality.py
tests/: __init__.py  test_config.py  test_utils.py  test_version.py  utils.py
tests/integration/: conftest.py  test_accounts.py  test_auth.py  test_lists.py  test_post.py  test_read.py  test_status.py  test_timelines.py  test_update_account.py
tests/tui/: test_rich_text.py
toot/: __init__.py  api.py  auth.py  cache.py  config.py  entities.py  http.py  logging.py  settings.py  wcstring.py
toot/cli/: __init__.py  accounts.py  diag.py  post.py  read.py  statuses.py  timelines.py  timelines_v2.py  tui.py  validators.py
toot/tui/: __init__.py  app.py  compose.py  entities.py  images.py  overlays.py  poll.py  scroll.py  timeline.py  utils.py
toot/tui/richtext/: __init__.py  richtext.py
toot/utils/: __init__.py  datetime.py
tootles/: __init__.py  __main__.py  main.py
tootles/api/: __init__.py  client.py  models.py
tootles/cli/: __init__.py  main.py  setup.py
tootles/config/: __init__.py  manager.py  schema.py
tootles/media/: __init__.py  cache.py  external.py  formats.py  loader.py  manager.py  renderer.py
tootles/screens/: __init__.py  account.py  base.py  explore.py  help.py  home.py  notifications.py  settings.py
tootles/themes/: __init__.py  manager.py
tootles/themes/builtin/: __init__.py  community-template.css  dark.css  default.css  high-contrast.css  light.css
tootles/widgets/: __init__.py  compose.py  status.py  timeline.py
tootles/widgets/media/: __init__.py  gallery.py  placeholder.py  widget.py
